# wasmvm

./: .cursorignore  .dockerignore  .editorconfig  .gitignore  .golangci.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.alpine-go  Dockerfile.alpine-rust  Dockerfile.alpine_tester  Dockerfile.centos7  Dockerfile.cross  Makefile  NOTICE  README.md  TODO  WASMVM_FIXES_NEEDED.md  _typos.toml  bindings.h  build.rs  build_demo.sh  cbindgen.toml  flake.nix  go.mod  go.sum  ibc_test.go  lib.go  lib_libwasmvm.go  lib_libwasmvm_no_cgo.go  lib_libwasmvm_test.go  lib_libwasmvm_wazero.go  lib_no_cgo.go  lib_no_cgo_test.go  lib_nocgo.go  lib_test.go  memory_test.go  rust-toolchain.toml  (+9 more)
.circleci/: config.yml
.cursor/rules/: project-description.mdc  wasmvm-description.mdc
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: audity.yml  autofix.yml  bat.yml  cargo-audit.yml  cargo-deny.yml  checks.yml  clippy.yml  fuzz.yml  go.yml  golangci.yml  libwasmvm-sanity.yml  lint-go.yml  rust.yml  tests.yml  windows.yml
.reference-code/: cosmwasm  wazero
api/: api.go  api_cgo.go  api_test.go  bindings.h  callbacks.go  callbacks_cgo.go  db.go  db_cgo.go  iterator.go  iterator_test.go  lib.go  lib_test.go  libgo_cosmwasm.dylib  libwasmvm.dylib  link_custom.go  link_glibclinux_aarch64.go  link_glibclinux_x86_64.go  link_mac.go  link_muslc.go  link_std.go  memory.go  memory_test.go  mock_failure_test.go  mock_test.go  mocks.go  version.go  version_test.go
api/testdata/: README.md  download_releases.sh  hackatom.wasm  ibc_reflect.wasm  queue.wasm  reflect.wasm
builders/: Dockerfile.alpine  Dockerfile.centos7  Dockerfile.cross  Dockerfile.debian  Makefile  README.md  build_muslc.sh  build_osx.sh
builders/guest/: build_gnu_aarch64.sh  build_gnu_x86_64.sh  build_linux.sh  build_macos.sh  build_macos_native.sh  build_macos_static.sh  build_muslc.sh  build_windows.sh  build_windows_static.sh  cargo-config
cmd/: main.go
cmd/demo/: main.go
contracts/floaty/src/: instructions.rs
devtools/: get_glibc_version.sh  set_version.sh
docs/: CGO_INTERFACE.md  COMPILER_VERSIONS.md  MIGRATING.md  NO_ERRNO.md  libwasmvm_builds.py
examples/debugvectors/: debug_vectors.go
examples/safeapi/: safe_api_example.go
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_target_1.rs
fuzz/go/: code_management_fuzz_test.go  contract_execute_fuzz_test.go  gas_metering_fuzz_test.go  metadata_fuzz_test.go  multi_contract_fuzz_test.go  pin_unpin_fuzz_test.go  query_fuzz_test.go  store_wasm_fuzz_test.go
fuzz/rust/: Cargo.toml
fuzz/rust/fuzz_targets/: execute.rs  gas_metering.rs  ibc_operations.rs  instantiate.rs  migrate.rs  multi_contract.rs  pin_unpin.rs  query.rs  store_code.rs
internal/: combined_code.md
internal/api/: address_validation_test.go  api.go  api_test.go  bindings.h  callbacks.go  callbacks_cgo.go  combined_code.md  compatibility.go  constants.go  iterator.go  iterator_test.go  lib.go  lib_no_cgo.go  lib_test.go  link_mac.go  link_mac_static.go  link_muslc.go  link_muslc_aarch64.go  link_muslc_x86_64.go  memory.go  memory_test.go  memory_test_no_cgo.go  memorycorruption_test.go  mock_failure.go  mocks.go  newvm.go  runtime.go  version.go  version_test.go  vm.go
internal/api/testdata/: README.md
internal/api/testdb/: README.md  memdb.go  memdb_iterator.go  types.go
internal/ffi/: bindings.go  types.go  version.go
internal/interface/: wasmruntime.go
internal/runtime/: combined_code.txt  constants.go  crypto.go  gas.go  hostcrypto.go  hostfunctions.go  initalize.go  instantiate.go  memory.go  register.go  registerhostfunctions.go  requiredhostfunctions.go  tracing.go  validation.go  wasmruntime.go  wazeroruntime.go
internal/runtime/cache/: cache.go
internal/runtime/constants/: constants.go  gas.go
internal/runtime/crypto/: bls.go  bls_impl.go  crypto.go  errors.go  host.go  host_bls.go  host_secp256r1.go  hostcrypto.go  secp256r1.go
internal/runtime/cryptoapi/: types.go
internal/runtime/db/: host.go  store.go
internal/runtime/error/: errors.go
internal/runtime/gas/: gas.go  (+1 more)
internal/wasmer/: wasmer.go
internal/wasmvmint/: wasmruntime.go
internal/wazeroimpl/: reflect_test.go  runtime.go  runtime_test.go
libwasmvm/: Cargo.toml  bindings.h  cbindgen.toml  clippy.toml  deny.toml
libwasmvm/examples/: staticwasmvm.rs
libwasmvm/src/: api.rs  api_test.rs  args.rs  cache.rs  calls.rs  db.rs  gas_report.rs  handle_vm_panic.rs  iterator.rs  lib.rs  memory.rs  querier.rs  storage.rs  test_utils.rs  tests.rs  version.rs  vtables.rs
libwasmvm/src/api/: tests.rs
libwasmvm/src/error/: errno.rs  go.rs  mod.rs  rust.rs
libwasmvm/src/examples/: wasmvmstatic.rs
proto/: generate.sh  wasmvm.proto
rpc/: wasmvm.pb.go  wasmvm_grpc.pb.go
rpc-server/: .cursorignore  CACHE_CONFIG.md  COMPREHENSIVE_SECURITY_TESTING.md  Cargo.toml  SECURITY_FINDINGS.md  build.rs  test_connection.sh  test_server_startup.sh
rpc-server/src/: benchmarks.rs  combined_code.md  lib.rs  main.rs  main_lib.rs  security.rs  simple_security_tests.rs  vm_behavior_tests.rs  vtables.rs
rpc-server/tests/: integration_tests.rs
spec/: Architecture.md  Index.md  Specification.md
src/: api.rs  args.rs  cache.rs  calls.rs  db.rs  error.rs  iterator.rs  lib.rs  memory.rs  nothing.rs  querier.rs  storage.rs  tests.rs
src/error/: go.rs  mod.rs  rust.rs
testdata/: README.md  bulkmemory.wasm  bulkmemory.wat  counter.wasm  cyberpunk.wasm  hackatom.wasm  ibc_reflect.wasm  invalidgrowth.wasm  invalidgrowth.wat  oob.wasm  oob.wat  queue.wasm  reflect.wasm
types/: api.go  capaility.go  checksum.go  config.go  config_test.go  env.go  env_test.go  errors.go  eureka.go  fraction.go  gas.go  ibc.go  ibc2.go  ibc_test.go  ibcv2.go  json_size.go  json_size_ibc_test.go  json_size_test.go  msg.go  msg_test.go  mutex.go  optional_string.go  optional_string_test.go  queries.go  queries_test.go  stderror.go  store.go  subcall.go  submessages.go  submessages_test.go  systemerror.go  systemerror_test.go  types.go  types_test.go
wazero/: wasmruntime.go
(+29 files in other folders)
