[package]
name = "go-cosmwasm"
version = "0.9.0-alpha"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Go bindings for cosmwasm contracts"
repository = "https://github.com/CosmWasm/go-cosmwasm"
license = "Apache-2.0"
readme = "README.md"
exclude = [".circleci/*", ".gitignore"]

[lib]
#crate-type = ["staticlib"]
crate-type = ["cdylib"]

[[example]]
name = "muslc"
path = "src/lib.rs"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges]
circle-ci = { repository = "CosmWasm/go-cosmwasm", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
default = ["singlepass", "backtraces"]
backtraces = ["snafu/backtraces"]
singlepass = ["cosmwasm-vm/default-singlepass"]
cranelift = ["cosmwasm-vm/default-cranelift"]

[dependencies]
cosmwasm-std = { git = "https://github.com/cosmwasm/cosmwasm", rev = "65df0f0c602f851790a3e7014ec20523f83a3dbf", features = ["iterator"]}
cosmwasm-vm = { git = "https://github.com/cosmwasm/cosmwasm", rev = "65df0f0c602f851790a3e7014ec20523f83a3dbf", features = ["iterator"] }
errno = "0.2"
snafu = "0.6.3"
serde_json = "1.0"

[build-dependencies]
cbindgen = { version = "0.14" }

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true
