[package]
name = "go-cosmwasm"
version = "0.12.0-alpha1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Go bindings for cosmwasm contracts"
repository = "https://github.com/CosmWasm/go-cosmwasm"
license = "Apache-2.0"
readme = "README.md"
exclude = [".circleci/*", ".gitignore"]

[lib]
crate-type = ["cdylib"]

# the example is to allow us to compile a muslc static lib with the same codebase as we compile the
# normal dynamic libs (best workaround I could find to override crate-type on the command line)
[[example]]
name = "muslc"
path = "src/lib.rs"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges]
circle-ci = { repository = "CosmWasm/go-cosmwasm", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
default = ["singlepass", "backtraces"]
# This feature requires Rust nightly because it depends on the unstable backtrace feature.
backtraces = []
singlepass = ["cosmwasm-vm/default-singlepass"]
cranelift = ["cosmwasm-vm/default-cranelift"]

[dependencies]
cosmwasm-std = { version = "0.12.0-alpha3", features = ["iterator"]}
cosmwasm-vm = { version = "0.12.0-alpha3", features = ["iterator"] }
errno = "0.2"
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
tempfile = "3.1.0"

[build-dependencies]
cbindgen = { version = "0.14" }

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true
