[package]
name = "wasmvm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]
exclude = ["rust"]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
arbitrary = { version = "^1.3.2", features = ["derive"] }
tempfile = "3.1"
cosmwasm-vm = { git = "https://github.com/CosmWasm/cosmwasm.git", branch = "main", features = [
    "staking",
    "stargate",
    "iterator",
    "ibc2",
] }

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false
