[package]
name = "wasmvm"
version = "2.2.2"
publish = false
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Go bindings for cosmwasm contracts"
repository = "https://github.com/CosmWasm/wasmvm"
license = "Apache-2.0"
readme = "README.md"
exclude = [".circleci/*", ".gitignore"]

[lib]
crate-type = ["cdylib", "rlib"]

# the example is to allow us to compile a muslc static lib with the same codebase as we compile the
# normal dynamic libs (best workaround I could find to override crate-type on the command line)
[[example]]
name = "wasmvmstatic"
path = "src/examples/wasmvmstatic.rs"
crate-type = ["staticlib"]

[features]
default = []
# This feature requires Rust nightly because it depends on the unstable backtrace feature.
backtraces = []

[dependencies]
# cosmwasm-std = { git = "https://github.com/CosmWasm/cosmwasm.git", rev = "v2.2.0", features = [
#   "staking",
#   "stargate",
#   "iterator",
# ] }
# cosmwasm-vm = { git = "https://github.com/CosmWasm/cosmwasm.git", rev = "v2.2.0", features = [
#   "staking",
#   "stargate",
#   "iterator",
# ] }
# Temporarily using CosmWasm's `main` branch until the next release.
# This allows us to build WasmVM with the latest CosmWasm changes to develop IBC2 support more easily.
# You can also use a different branch or a local path in your branches and change it back to `main`
# when the CosmWasm PR gets merged.
cosmwasm-std = { git = "https://github.com/CosmWasm/cosmwasm.git", branch = "main", features = [
  "staking",
  "stargate",
  "iterator",
  "ibc2",
] }
cosmwasm-vm = { git = "https://github.com/CosmWasm/cosmwasm.git", branch = "main", features = [
  "staking",
  "stargate",
  "iterator",
  "ibc2",
] }
errno = "0.3.8"
rmp-serde = "1.3.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "2.0.12"
hex = "0.4.3"
time = { version = "0.3.36", features = ["formatting"] }
wasmparser = "0.229.0"
bech32 = "0.11.0"
sha3 = "0.10.8"
ethaddr = "0.2.0"

[dev-dependencies]
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
tempfile = "3.4.0"

[build-dependencies]
cbindgen = "0.28.0"

[profile.release]
opt-level = 3
debug = false
rpath = true
lto = false
debug-assertions = false
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true
