[package]
name = "wasmvm-rpc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.8", features = ["transport"] }
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1", features = ["full"] }
wasmvm = { path = "../libwasmvm" }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
tower = "0.4"
hyper = "0.14"
tonic-build = "0.8"

[build-dependencies]
tonic-build = "0.8"
