[package]
name = "wasmvm-rpc-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.13.1", features = ["transport"] }
prost = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1", features = ["full"] }
wasmvm = { path = "../libwasmvm" }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1.17"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
tower = "0.5.2"
hyper = "1.6.0"
tonic-build = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
