[package]
name = "wasmvm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
arbitrary = { version = "1", features = ["derive"] }
tempfile = "3.1"
cosmwasm-vm = { path = "../../libwasmvm/src" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "store_code"
path = "fuzz_targets/store_code.rs"
test = false
doc = false

[[bin]]
name = "instantiate"
path = "fuzz_targets/instantiate.rs"
test = false
doc = false

[[bin]]
name = "execute"
path = "fuzz_targets/execute.rs"
test = false
doc = false

[[bin]]
name = "query"
path = "fuzz_targets/query.rs"
test = false
doc = false

[[bin]]
name = "pin_unpin"
path = "fuzz_targets/pin_unpin.rs"
test = false
doc = false

[[bin]]
name = "migrate"
path = "fuzz_targets/migrate.rs"
test = false
doc = false

[[bin]]
name = "ibc_operations"
path = "fuzz_targets/ibc_operations.rs"
test = false
doc = false

[[bin]]
name = "gas_metering"
path = "fuzz_targets/gas_metering.rs"
test = false
doc = false

[[bin]]
name = "multi_contract"
path = "fuzz_targets/multi_contract.rs"
test = false
doc = false
